--- a/src/index.css
+++ b/src/index.css
@@ -166,6 +166,12 @@ img {
   margin-right: auto;
 }
 
+.Error {
+  color: red;
+  margin-left: auto;
+  margin-right: auto;
+}
+
 /*
  * Стили компонента Modal
  */
